# Spaceport-America-HPR

./: README.md
altos/: .gitignore  ChangeLog  Makefile.am  README  Releasing  configure.ac  signing-driver
altos/altosdroid/: .gitignore  Makefile.am  Notebook  build.gradle  buildinfo.sh  release-note-1.5
altos/altosdroid/app/: build.gradle.in
altos/altoslib/: .gitignore  AltosAccel.java  AltosAccelCal.java  AltosAccelCalListener.java  AltosAdxl375.java  AltosCRCException.java  AltosCSV.java  AltosCalData.java  AltosCompanion.java  AltosConfigData.java  AltosConfigDataException.java  AltosConfigValues.java  AltosConvert.java  AltosDataListener.java  AltosDataProvider.java  AltosDebug.java  AltosDistance.java  AltosEeprom.java  AltosEepromChunk.java  AltosEepromDownload.java  AltosEepromFile.java  AltosEepromList.java  AltosEepromLog.java  AltosEepromMonitor.java  AltosEepromRecord.java  AltosEepromRecordFireTwo.java  AltosEepromRecordFull.java  AltosEepromRecordGps.java  AltosEepromRecordMega.java  AltosEepromRecordMetrum.java  AltosEepromRecordMicroPeak2.java  AltosEepromRecordMini.java  AltosEepromRecordMotor.java  AltosEepromRecordSet.java  AltosEepromRecordTiny.java  AltosFile.java  AltosFilterListener.java  AltosFlash.java  AltosFlashListener.java  AltosFlightDisplay.java  (+130 more)
altos/altosui/: .gitignore  Altos.java  AltosAscent.java  AltosChannelMenu.java  AltosCompanionInfo.java  AltosConfigFC.java  AltosConfigFCUI.java  AltosConfigPyroUI.java  AltosConfigTD.java  AltosConfigTDUI.java  AltosConfigureUI.java  AltosDescent.java  AltosDevice.java  AltosFlightStatus.java  AltosFlightStatusTableModel.java  AltosFlightStatusUpdate.java  AltosFlightUI.java  AltosGraphUI.java  AltosIdleMonitorUI.java  AltosIgniteUI.java  AltosIgnitor.java  AltosLanded.java  AltosLaunch.java  AltosLaunchUI.java  AltosPad.java  AltosUI.java  Info.plist.in  Makefile-standalone  Makefile.am  ReadMe-Mac.rtf  altos-windows.nsi.in  altusmetrum-altosui.desktop.in  ask-pass  install-macosx  linux-install.sh  mdwn.tmpl
altos/altosuilib/: .gitignore  AltosBTDevice.java  AltosBTDeviceIterator.java  AltosBTKnown.java  AltosBTManage.java  AltosCSVUI.java  AltosConfigFreqUI.java  AltosDataChooser.java  AltosDevice.java  AltosDeviceDialog.java  AltosDeviceUIDialog.java  AltosDisplayThread.java  AltosEepromDelete.java  AltosEepromGrapher.java  AltosEepromManage.java  AltosEepromMonitorUI.java  AltosEepromSelect.java  AltosFlashUI.java  AltosFlightInfoTableModel.java  AltosFlightStatsTable.java  AltosGraph.java  AltosInfoTable.java  AltosLed.java  AltosLights.java  AltosPositionListener.java  AltosRomconfigUI.java  AltosScanUI.java  AltosSerial.java  AltosSerialInUseException.java  AltosShapeListener.java  AltosUIAccelCal.java  AltosUIAxis.java  AltosUIConfigure.java  AltosUIDataMissing.java  AltosUIDataPoint.java  AltosUIDataSet.java  AltosUIDialog.java  AltosUIEnable.java  AltosUIFlightSeries.java  AltosUIFlightTab.java  (+23 more)
altos/ao-bringup/: .gitignore  ao_bringup.h  ao_init.c  ao_led_blink.c  ao_radio_init.c  ao_radio_test.c  ao_radio_xmit.c  cal-freq  fix-telebt  test-chaoskey  test-easymega  test-easymega-v1.0  test-easymini  test-easymini-v1.0  test-easymotor  test-easytimer  test-gps  test-igniters  test-igniters-nowait  test-telegps-v1  test-telegps-v2  test-telemega  test-telemega-v1.0  test-telemega-v2.0  test-telemega-v3.0  test-telemega-v4.0  test-telemetrum  test-telemetrum-v2.0  test-telemini  turnon_chaoskey  turnon_easymega  turnon_easymega_v1.0  turnon_easymini  turnon_easymotor  turnon_easytimer  turnon_telebt  turnon_telebt_v1  turnon_telebt_v3  turnon_teledongle  turnon_teledongle_v0.2  (+13 more)
altos/ao-tools/: Makefile.am
altos/ao-tools/ao-bitbang/: Makefile.am
altos/ao-tools/ao-bm70/: Makefile.am
altos/ao-tools/ao-boot-stm32/: Makefile.am
altos/ao-tools/ao-cal-accel/: .gitignore  Makefile.am  ao-cal-accel.1  ao-cal-accel.c
altos/ao-tools/ao-cal-freq/: .gitignore  Makefile.am  ao-cal-freq.1  ao-cal-freq.c
altos/ao-tools/ao-dbg/: Makefile.am  ao-dbg-command.c  ao-dbg-main.c  ao-dbg-parse.c  ao-dbg.1  ao-dbg.h
altos/ao-tools/ao-dump-up/: Makefile.am  ao-dump-up.1  ao-dump-up.c
altos/ao-tools/ao-dumpflash/: Makefile.am  (+1 more)
altos/doc/: .gitignore  Makefile.am  RELNOTES  altos.txt  altosdroid.inc  altosui.inc  altusmetrum-theme.yml  altusmetrum.txt  am-notoc.css  am.css  aprs-operation.inc  companion.txt  config-device.inc  config-ui.inc  dedication.inc  easymega-outline.txt  easymega.inc  easymini-device.inc  easymini-outline.txt  easymini-release-notes.inc  easymini.txt  easytimer.inc  fix-html  flight-data-recording.inc  frequency-cal.inc  getting-started.inc  handling.inc  header.inc  install-html  installation.inc  intro.inc  load-maps.inc  make-am-html  map-loading.dot  map-loading.txt  micropeak.txt  motortest-configuration.inc  motortest-installation.inc  motortest-intro.inc  motortest-operation.inc  (+80 more)
altos/icon/: .gitignore  Makefile.am  creating-linux-icons  led.5c  make-rc  org-altusmetrum-mimetypes.xml  windows-stub.c
altos/libaltos/: .gitignore  Makefile-standalone  Makefile.am  btletest.c  cjnitest.c  gcc  libaltos.dylib  libaltos.h  libaltos_common.c  libaltos_darwin.c  libaltos_linux.c  libaltos_posix.c  libaltos_posix.h  libaltos_private.h  libaltos_windows.c
altos/map-server/: Makefile.am
altos/micropeak/: .gitignore  Info.plist.in  Makefile.am  MicroData.java  MicroDeviceDialog.java  MicroDownload.java  MicroExport.java  MicroFile.java  MicroFileChooser.java  MicroFrame.java  MicroPeak.java  MicroRaw.java  MicroSave.java  MicroSerial.java  MicroSerialLog.java  MicroUSB.java  ReadMe-Mac.rtf  altusmetrum-micropeak.desktop.in  mdwn.tmpl  micropeak-windows.nsi.in
altos/src/: .gitignore  Makedefs.in  Makefile.defs
altos/telegps/: .gitignore  Info.plist.in  Makefile.am  ReadMe-Mac.rtf  TeleGPS.java  TeleGPSConfig.java  TeleGPSConfigUI.java  TeleGPSDisplayThread.java  TeleGPSGraphUI.java  TeleGPSInfo.java  TeleGPSPreferences.java  TeleGPSState.java  TeleGPSStatus.java  TeleGPSStatusUpdate.java  altusmetrum-telegps.desktop.in  mdwn.tmpl  telegps-windows.nsi.in
(+1012 files in other folders)
